[project]
name = "backend-part-spa-web-application"
version = "0.1.0"
description = "backend_part_spa_web_application"
authors = [
    {name = "Artur Koltyrin"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "djangorestframework-simplejwt (>=5.5.0,<6.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
