[project]
name = "backend-part-spa-web-application"
version = "0.1.0"
description = "backend_part_spa_web_application"
authors = [
    {name = "Artur Koltyrin"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "djangorestframework-simplejwt (>=5.5.0,<6.0.0)",
    "asgiref (>=3.8.1,<4.0.0)",
    "djangorestframework (>=3.16.0,<4.0.0)",
    "pillow (>=11.2.1,<12.0.0)",
    "psycopg2-binary (>=2.9.10,<3.0.0)",
    "sqlparse (>=0.5.3,<0.6.0)",
    "typing-extensions (>=4.13.2,<5.0.0)",
    "python-dotenv (>=1.1.0,<2.0.0)",
    "django-filter (>=25.1,<26.0)",
    "drf-yasg (>=1.21.10,<2.0.0)",
    "redis (>=6.1.0,<7.0.0)",
    "celery (>=5.5.2,<6.0.0)",
    "ipython (>=9.2.0,<10.0.0)",
    "coverage (>=7.8.0,<8.0.0)",
    "django-celery-beat (>=2.8.1,<3.0.0) ; python_version >= \"3.11\" and python_version < \"4.0\""
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.lint.dependencies]
mypy = "^1.16.1"
black = "^25.1.0"
isort = "^6.0.1"
flake8 = "^7.3.0"

